MDEV-20729 Fix REFERENCES constraint in column definition

As of version 10.5 MariaDB supports referential constraints as
separate table elements:

CREATE OR REPLACE TABLE t1 (
  id SMALLINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL
) ENGINE = InnoDB;

CREATE OR REPLACE TABLE t2 (
  id MEDIUMINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
  title VARCHAR(200) NOT NULL,
  author_id SMALLINT UNSIGNED NOT NULL,
  CONSTRAINT `fk_book_author` FOREIGN KEY (author_id) REFERENCES t1 (id)
) ENGINE = InnoDB;

Under terms of this task we'll add support of referential constraints
directly in column defininions:

CREATE OR REPLACE TABLE t1 (
  id SMALLINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
  name VARCHAR(100) NOT NULL
) ENGINE = InnoDB;

CREATE OR REPLACE TABLE t2 (
  id MEDIUMINT UNSIGNED NOT NULL AUTO_INCREMENT PRIMARY KEY,
  title VARCHAR(200) NOT NULL,
  author_id SMALLINT UNSIGNED NOT NULL REFERENCES t1 (id),
) ENGINE = InnoDB;

As of 10.5 this syntax is understood by the parser but is silently
ignored. After this task this syntax actually works.

In case of generated columns this syntax is disabled at parser level
by ER_PARSE_ERROR. Note that separate FOREIGN KEY clause disables
generated columns at storage engine level.